[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/game/view/controls/arrows_controls/ArrowsControls.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/MyFont.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=5]
size = 15
outline_size = 1
extra_spacing_char = 3
font_data = ExtResource( 2 )

[node name="ArrowsControlsControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.38
script = ExtResource( 1 )

[node name="BackGroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.866667, 0, 0 )

[node name="StatusButtonsControl" type="Control" parent="."]
anchor_left = 0.02
anchor_top = 0.03
anchor_right = 0.98
anchor_bottom = 0.16

[node name="RestartButton" type="Button" parent="StatusButtonsControl"]
anchor_right = 0.27
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )

[node name="PauseButton" type="Button" parent="StatusButtonsControl"]
anchor_left = 0.73
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "||"

[node name="DirectionInputContainerControl" type="Control" parent="."]
anchor_left = 0.21
anchor_top = 0.226
anchor_right = 0.79
anchor_bottom = 1.0
margin_right = 0.440002
margin_bottom = -1.88368

[node name="UpButton" type="Button" parent="DirectionInputContainerControl"]
anchor_left = 0.338
anchor_right = 0.662
anchor_bottom = 0.324
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )

[node name="DownButton" type="Button" parent="DirectionInputContainerControl"]
anchor_left = 0.338
anchor_top = 0.676
anchor_right = 0.662
anchor_bottom = 1.0

[node name="LeftButton" type="Button" parent="DirectionInputContainerControl"]
anchor_top = 0.338
anchor_right = 0.324
anchor_bottom = 0.662

[node name="RightButton" type="Button" parent="DirectionInputContainerControl"]
anchor_left = 0.676
anchor_top = 0.338
anchor_right = 1.0
anchor_bottom = 0.662

[connection signal="button_down" from="StatusButtonsControl/RestartButton" to="." method="_on_RestartButton_button_down"]
[connection signal="button_down" from="StatusButtonsControl/PauseButton" to="." method="_on_PauseButton_button_down"]
[connection signal="button_down" from="DirectionInputContainerControl/UpButton" to="." method="_on_UpButton_button_down"]
[connection signal="button_down" from="DirectionInputContainerControl/DownButton" to="." method="_on_DownButton_button_down"]
[connection signal="button_down" from="DirectionInputContainerControl/LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_down" from="DirectionInputContainerControl/RightButton" to="." method="_on_RightButton_button_down"]
